--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,8 @@ endif(MINGW)
 # Build application
 SET(SRCS main.cpp MainFrame.cpp LicenseFrame.cpp StartPanel.cpp SourcePanel.cpp
     SourceDialog.cpp MetalinkEditor.cpp MetalinkFile.cpp MetalinkSource.cpp
-    Metalink4Writer.cpp Metalink4Reader.cpp XmlParser.cpp util.cpp)
+    Metalink4Writer.cpp Metalink4Reader.cpp Metalink3Reader.cpp XmlParser.cpp
+    util.cpp)
 IF(WIN32)
     SET(SRCS ${SRCS} windows.rc)
 ENDIF()
