Can now save Metalink version 3.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,8 +47,8 @@ ENDIF()
 # Build application
 SET(SRCS main.cpp MainFrame.cpp LicenseFrame.cpp StartPanel.cpp SourcePanel.cpp
     SourceDialog.cpp MetalinkEditor.cpp MetalinkFile.cpp MetalinkSource.cpp
-    Metalink4Writer.cpp Metalink4Reader.cpp Metalink3Reader.cpp XmlParser.cpp
-    util.cpp)
+    Metalink4Writer.cpp Metalink3Writer.cpp Metalink4Reader.cpp
+    Metalink3Reader.cpp XmlParser.cpp util.cpp)
 IF(WIN32)
     SET(SRCS ${SRCS} windows.rc)
 ENDIF()
