--- a/config.h.in
+++ b/config.h.in
@@ -1,2 +1,3 @@
 #define CMAKE_INSTALL_PREFIX "@CMAKE_INSTALL_PREFIX@"
+#define CMAKE_SOURCE_DIR "@CMAKE_CURRENT_SOURCE_DIR@"
 #define METALINKEDITOR_VERSION "@METALINKEDITOR_VERSION@"
