--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ ENDIF()
 SET(SRCS MetalinkEditor.cpp MetalinkFile.cpp MetalinkSource.cpp
     MetalinkWriter.cpp Metalink4Writer.cpp Metalink3Writer.cpp
     Metalink4Reader.cpp Metalink3Reader.cpp XmlParser.cpp util.cpp
-    HashContextImpl.cpp HashContext.cpp)
+    HashContextImpl.cpp HashContext.cpp FileScan.cpp)
 
 # Build application
 SET(APP_SRCS ${SRCS} main.cpp MainFrame.cpp LicenseFrame.cpp StartPanel.cpp
