Add a few tests.

--- a/config.h.in
+++ b/config.h.in
@@ -1,3 +1,9 @@
 #define CMAKE_INSTALL_PREFIX "@CMAKE_INSTALL_PREFIX@"
-#define CMAKE_SOURCE_DIR "@CMAKE_CURRENT_SOURCE_DIR@"
+#define SOURCE_DIR "@CMAKE_CURRENT_SOURCE_DIR@"
+#define BINARY_DIR "@CMAKE_CURRENT_BINARY_DIR@"
+
+#ifndef CPPUNIT
 #define METALINKEDITOR_VERSION "@METALINKEDITOR_VERSION@"
+#else
+#define METALINKEDITOR_VERSION "TEST"
+#endif
