Added "Scan File" menu under "Metalink" menu. It can construct new Metalink File by reading local file. Metalink4Writer now saves file size and hash.
Currently, it scans file and computes md5, sha-1 and sha-256 hash and
sha-1 piece hash with 4MiB block. It would be good to add UI to choose
which hash to compute(or not compute entirely).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,8 @@ ENDIF()
 SET(SRCS MetalinkEditor.cpp Metalink.cpp MetalinkFile.cpp MetalinkSource.cpp
     MetalinkWriter.cpp Metalink4Writer.cpp Metalink3Writer.cpp
     Metalink4Reader.cpp Metalink3Reader.cpp XmlParser.cpp util.cpp
-    HashContextImpl.cpp HashContext.cpp FileScan.cpp)
+    HashContextImpl.cpp HashContext.cpp FileScan.cpp
+    ProgressDialogProgressListener.cpp)
 
 # Build application
 SET(APP_SRCS ${SRCS} main.cpp MainFrame.cpp LicenseFrame.cpp StartPanel.cpp
